# pdf-c

./: Cargo.toml  README.md  function.js  index.html  request_raw.json  test_base64.txt  test_pdf_base64.txt
pkg/: package.json  pdf_c.d.ts  pdf_c.js  pdf_c_bg.wasm  pdf_c_bg.wasm.d.ts
src/: errors.rs  lib.rs  main.rs  wasm_bindings.rs
