[package]
name = "pdf-c"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
miniz_oxide = "0.7.1"
image = "0.24.6"
log = "0.4.22"
lopdf = "0.34.0"
wasm-bindgen = "0.2.93"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1.7"
simple-http-server = "0.6"
