[package]
name = "pdf-c"
version = "0.1.0"
edition = "2021"

[lib]
name = "pdf_c"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pdf-c"
path = "src/main.rs"

[dependencies]
miniz_oxide = "0.7.1"
image = "0.24.6"
log = "0.4.22"
lopdf = "0.34.0"
base64 = "0.21"
sgxkit = { git = "https://github.com/fleek-network/lightning", rev = "21542ac506c6cb8c281d6428f25055d5a8ce8b7e" }

[profile.release]
lto = "fat"
codegen-units = 1